--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "{'m': 1.25, 'b': 150.0}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,40 +842,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'm_b_trace' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-572e6bc202e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrace_show_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm_b_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshow_starting_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'm'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_starting_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_x_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'starting line'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'm_b_trace' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'trace_show_line' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-f3bab42c2f3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrace_show_line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'trace_show_line' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400.0, 650.0, 525.0, 900.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'starting line'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -884,61 +874,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "mode": "markers",
-         "name": "comedy show data",
-         "type": "scatter",
-         "uid": "0d8f2478-8871-11e9-b857-cd6f77c5db7d",
-         "x": [
-          200,
-          400,
-          300,
-          600
-         ],
-         "y": [
-          400,
-          700,
-          500,
-          900
-         ]
-        },
-        {
-         "mode": "lines",
-         "name": "starting line",
-         "type": "scatter",
-         "uid": "0d8f264e-8871-11e9-b857-cd6f77c5db7d",
-         "x": [
-          200,
-          400,
-          300,
-          600
-         ],
-         "y": [
-          400,
-          650,
-          525,
-          900
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"73dbe1c4-b707-47cb-9161-8c1a5a1183ae\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"73dbe1c4-b707-47cb-9161-8c1a5a1183ae\", [{\"mode\": \"markers\", \"name\": \"comedy show data\", \"x\": [200, 400, 300, 600], \"y\": [400, 700, 500, 900], \"type\": \"scatter\", \"uid\": \"0d947eaa-8871-11e9-b857-cd6f77c5db7d\"}, {\"mode\": \"lines\", \"name\": \"starting line\", \"x\": [200, 400, 300, 600], \"y\": [400.0, 650.0, 525.0, 900.0], \"type\": \"scatter\", \"uid\": \"0d948094-8871-11e9-b857-cd6f77c5db7d\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"73dbe1c4-b707-47cb-9161-8c1a5a1183ae\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"73dbe1c4-b707-47cb-9161-8c1a5a1183ae\", [{\"mode\": \"markers\", \"name\": \"comedy show data\", \"x\": [200, 400, 300, 600], \"y\": [400, 700, 500, 900], \"type\": \"scatter\", \"uid\": \"0d947eaa-8871-11e9-b857-cd6f77c5db7d\"}, {\"mode\": \"lines\", \"name\": \"starting line\", \"x\": [200, 400, 300, 600], \"y\": [400.0, 650.0, 525.0, 900.0], \"type\": \"scatter\", \"uid\": \"0d948094-8871-11e9-b857-cd6f77c5db7d\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'plotly' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-b26eb014e958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcomedy_show_trace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrace_show_line\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-6698ba7ef0da>\u001b[0m in \u001b[0;36mplot\u001b[0;34m(traces)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraces\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moffline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraces\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'plotly' is not defined"
+     ]
     }
    ],
    "source": [
